# Shreeji-Chikki-Improved

./: .gitignore
backend/: package-lock.json  pyproject.toml  requirements.txt  schemafile.py  todo.md
backend/backend/: settings.py  urls.py
backend/backend/items/: admin.py  models.py  serializers.py  views.py
backend/customers/: models.py  serializers.py  urls.py  views.py
backend/customers/migrations/: 0001_initial.py  0002_alter_customers_updated_at.py
backend/employees/: admin.py  models.py  serializers.py  urls.py  views.py
backend/employees/migrations/: 0001_initial.py  0002_alter_employees_updated_at.py  0002_initial.py  0003_alter_timeentries_break_end_time_and_more.py  0003_alter_timeentries_notes.py  0004_alter_timeentries_notes.py
backend/inventory/: admin.py  models.py  serializers.py  urls.py  views.py
backend/inventory/migrations/: 0001_initial.py  0002_alter_inventory_updated_at.py  0003_remove_inventory_product_and_more.py
backend/orders/: admin.py  models.py  serializers.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py  0002_alter_purchaseorders_updated_at_and_more.py  0003_rename_expexted_shipping_date_orderitems_expected_shipping_date_and_more.py  (+1 more)
backend/products/: admin.py  models.py  serializers.py  urls.py  views.py
backend/raw_materials/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/suppliers/: models.py  serializers.py  urls.py  views.py
backend/tasks/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/: models.py
frontend/: index.html  notes.txt  (+5 more)
(+73 files in other folders)
